[package]
name = "s3etag"
version = "0.1.0"
edition = "2021"
description = "Calculate S3 ETag for multipart uploads"
license = "MIT"
repository = "https://github.com/imishinist/s3etag"
keywords = ["s3", "etag", "aws", "hash", "md5"]
categories = ["cryptography", "command-line-utilities"]

[lib]
name = "s3etag"
path = "src/lib.rs"

[[bin]]
name = "s3etag"
path = "src/bin/s3etag.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.0", features = ["derive"], optional = true }
md5 = "0.8"

[features]
default = []
cli = ["clap"]
